--- a/vra7.yaml.example
+++ b/vra7.yaml.example
@@ -1,4 +1,4 @@
-api_url: https://vra.company.local
+hostname: vra.company.local
 username: administrator@vsphere.local
 password: VMware1!
 tenant: vsphere.local
