Add additional action/alias, update config.schema, and add config python script

--- a/pack.yaml
+++ b/pack.yaml
@@ -1,6 +1,6 @@
 ---
 ref: vra7
-name: vRealize Automation 7
+name: vra7
 description: VMware vRealize Automation 7 integration pack.
 keywords:
     - vra7
