--- a/vra7.yaml.example
+++ b/vra7.yaml.example
@@ -1,5 +1,5 @@
 hostname: vra.company.local
 username: administrator@vsphere.local
-password: VMware1!
+password: "{{st2kv.system.vra7_password}}"
 tenant: vsphere.local
 verify_ssl: true
